--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dabai.installtip" >
-
-    <application
+	
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
+   
+	<application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+		android:debuggable="false">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -30,10 +33,20 @@
 			</intent-filter>
 		</receiver>
 		
+		<receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+		</receiver>
+		
 		
 		<service
 			android:name=".RingtoneService"
 			android:exported="false" />
+		
 		
     </application>
 
